--- a/site-google-glass-html5/index.html
+++ b/site-google-glass-html5/index.html
@@ -30,7 +30,7 @@
 <hgroup>
 <h3>Tecnologia > &nbsp;Inovações</h3>
 <h1>Saiba tudo sobre o Google Glass</h1>
-<h2>por Gustavo Guanabara</h2>
+<h2>por Jader Fróes</h2>
 <h3>Atualizado em 23/Abril/2013</h3>
 </hgroup>
 
