--- a/site-google-glass-html5/index.html
+++ b/site-google-glass-html5/index.html
@@ -9,13 +9,14 @@
 </head>
 <body>
 <div id="interface">
+    
     <header id="cabecalho">    
     <hgroup>
-        <h1>Google Glass</h1>
-        <h2>A revolução do Google está chegando</h2>
-        </hgroup>
+    <h1>Google Glass</h1>
+    <h2>A revolução do Google está chegando</h2>
+    </hgroup>
 
-<img src="_imagens/glass-oculos-preto-peq.png">
+    <img id="icone" src="_imagens/glass-oculos-preto-peq.png">
     <nav id="menu"> <!--tag para menu de navegação-->
     <h1>Menu Principal</h1>
     <ul type="disc"> <!--lista não ordenada-->
