--- a/site-google-glass-html5/index.html
+++ b/site-google-glass-html5/index.html
@@ -28,6 +28,8 @@
     </ul>
     </nav>
     </header>
+
+<section id="corpo">
 <hgroup>
 <h3>Tecnologia > &nbsp;Inovações</h3>
 <h1>Saiba tudo sobre o Google Glass</h1>
@@ -50,13 +52,16 @@
 <p>Não há uma data específica e oficial para o dispositivo ser lançado, ainda. Pode ser que ele esteja disponível em demonstrações a partir de 2013, mas seu lançamento para as lojas fica para, pelo menos, 2014.</p>
 
 <h1>Especificações Técnicas</h1>
-Tabela Técnica do Google Glass Mar/2013
+<table id="tabelaspec">
+    <caption> Tabela técnica do Google Glass <span>Mar/2013</span></caption>
 
-Tela:Resolução equivalente a tela de 25"
-Camera: 5MP para fotos / 720p para vídeos
-Conectividade: Wi-Fi/ Bluetooth
-Memória Interna: 12GB
-
+    <tr><td class="col-esq">Tela</td><td class="col-dir">Resolução equivalente a tela de 25"</td></tr>
+    <tr><td rowspan="2" class="col-esq">Camera</td><td class="col-dir">5MP para fotos</td></tr>
+    <tr><td class="col-dir">720p para vídeos</td></tr>
+    <tr><td rowspan="2" class="col-esq">Conectividade</td><td class="col-dir">Wi-Fi</td></tr>
+    <tr><td class="col-dir">Bluetooth</td></tr>
+    <tr><td class="col-esq">Memória Interna</td><td class="col-dir">12GB</td></tr>
+</table>
 <h2>Como funciona</h2>
 De acordo com fontes próximas do Google, os óculos vão contar com uma pequena tela de LCD ou AMOLED na parte superior e em frente aos olhos do usuário. Com o uso de uma câmera e GPS, você pode se situar, assim como selecionar opções com o movimento da cabeça
 
@@ -64,7 +69,8 @@ De acordo com fontes próximas do Google, os óculos vão contar com uma pequena
 <p>O vídeo de divulgação do Google mostra que você pode se transformar em uma espécie de “super-humano”, já que o aparelho pode indicar a quantos metros você está de seu destino, se o metrô está aberto ou fechado, mostrar o clima, agenda e até mesmo permitir que você marque encontros apenas com comandos de voz.</p>
 
 [AQUI ENTRA UM VÍDEO]
-
+</section>
+<aside id="lateral">
 <h1>Outras Notícias</h1>
 <h2>Vídeo mais recente</h2>
 
@@ -74,9 +80,12 @@ De acordo com fontes próximas do Google, os óculos vão contar com uma pequena
 <p>O Google enfim revelou as especificações completas do Google Glass, e com ele uma surpresa ainda inédita no mercado: a gigante das buscas usará um sistema de áudio baseado na transdução por condução. Através das hastes dos óculos, o som será transmitido para o ouvido do usuário por meio de microvibrações em determinados ossos de sua cabeça, sem usar nenhum tipo de alto-falante.</p>
 
 <p>Além da surpresa do áudio, a tela montada a frente do olho do usuário também chamou atenção. Serão 640 x 360 pixels de resolução que, em proporção, equivaleria a um monitor de 25 polegadas de alta definição colocado a 2,5 metros de distância do espectador.</p>
-
-<p>Copyright &copy; 2013 - by Gustavo Guanabara
-Facebook | Twitter</p>
+</aside>
+<footer id="rodape">
+<p>Copyright &copy; 2013 - by Gustavo Guanabara<br>
+<a href="http://facebook.com" target="_blanck"> Facebook</a>  |
+<a href="http://twitter.com" target="_blanck"> Twitter</a></p>
+</footer>
 </div>
 </body>
 </html>
