--- a/site-google-glass-html5/fotos.html
+++ b/site-google-glass-html5/fotos.html
@@ -1,14 +1,35 @@
-Google Glass
-A revolução do Google está chegando
+<!DOCTYPE html>
+<!--Comentário-->
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <title>Tudo sobre Google Glass</title>
+    <link rel="stylesheet" href="_css/estilo.css"> <!--link com CSS-->
 
-[AQUI ENTRA UMA FOTO]
+    <script language= "javascript" src="_javascript/funcoes.js"></script> </script>
+    
+</head>
+<body>
+<div id="interface">
+    
+    <header id="cabecalho">    
+    <hgroup>
+    <h1>Google Glass</h1>
+    <h2>A revolução do Google está chegando</h2>
+    </hgroup>
 
-Menu Principal
-- Home
-- Especificações
-- Fotos
-- Multimídia
-- Fale conosco
+    <img id="icone" src="_imagens/glass-oculos-preto-peq.png">
+    <nav id="menu"> <!--tag para menu de navegação-->
+    <h1>Menu Principal</h1>
+    <ul type="disc"> <!--lista não ordenada-->
+        <li onmouseover="mudaFoto('_imagens/home.png')" onmouseout="mudaFoto('_imagens/glass-oculos-preto-peq.png')"><a href="index.html">Home</a></li> <!--list item-->
+        <li onmouseover="mudaFoto('_imagens/especificacoes.png')" onmouseout="mudaFoto('_imagens/glass-oculos-preto-peq.png')"><a href="specs.html">Especificações</a></li>
+        <li onmouseover="mudaFoto('_imagens/fotos.png')" onmouseout="mudaFoto('_imagens/glass-oculos-preto-peq.png')"><a href="fotos.html">Fotos</a></li>
+        <li onmouseover="mudaFoto('_imagens/multimidia.png')" onmouseout="mudaFoto('_imagens/glass-oculos-preto-peq.png')"><a href="multimidia.html">Multimídia</a></li>
+        <li onmouseover="mudaFoto('_imagens/contato.png')" onmouseout="mudaFoto('_imagens/glass-oculos-preto-peq.png')"><a href="fale-conosco.html">Fale conosco</a></a></li>
+    </ul>
+    </nav>
+    </header>
 
 Glass > Fotos
 Galeria de Imagens do Google Glass
@@ -24,6 +45,11 @@ Veja na nossa galeria de fotos várias belas imagens que mostram algumas das pri
 - Vários tipos de lente
 - Informações importantes
 
-Copyright 2013 - by Gustavo Guanabara
-
-Facebook | Twitter
+<footer id="rodape">
+<p>Copyright &copy; 2020 - by Jader Froes & Gustavo Guanabara<br>
+<a href="http://facebook.com" target="_blanck"> Facebook</a>  |
+<a href="http://twitter.com" target="_blanck"> Twitter</a></p>
+</footer>
+</div>
+</body>
+</html>
