--- a/site-google-glass-html5/index.html
+++ b/site-google-glass-html5/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <title>Tudo sobre Google Glass</title>
     <link rel="stylesheet" href="_css/estilo.css"> <!--link com CSS-->
+
+    <script language= "javascript" src="_javascript/funcoes.js"></script> </script>
     
 </head>
 <body>
@@ -20,22 +22,26 @@
     <nav id="menu"> <!--tag para menu de navegação-->
     <h1>Menu Principal</h1>
     <ul type="disc"> <!--lista não ordenada-->
-        <li><a href="index.html">Home</a></li> <!--list item-->
-        <li><a href="specs.html">Especificações</a></li>
-        <li><a href="fotos.html">Fotos</a></li>
-        <li><a href="multimidia.html">Multimídia</a></li>
-        <li><a href="fale-conosco.html">Fale conosco</a></a></li>
+        <li onmouseover="mudaFoto('_imagens/home.png')" onmouseout="mudaFoto('_imagens/glass-oculos-preto-peq.png')"><a href="index.html">Home</a></li> <!--list item-->
+        <li onmouseover="mudaFoto('_imagens/especificacoes.png')" onmouseout="mudaFoto('_imagens/glass-oculos-preto-peq.png')"><a href="specs.html">Especificações</a></li>
+        <li onmouseover="mudaFoto('_imagens/fotos.png')" onmouseout="mudaFoto('_imagens/glass-oculos-preto-peq.png')"><a href="fotos.html">Fotos</a></li>
+        <li onmouseover="mudaFoto('_imagens/multimidia.png')" onmouseout="mudaFoto('_imagens/glass-oculos-preto-peq.png')"><a href="multimidia.html">Multimídia</a></li>
+        <li onmouseover="mudaFoto('_imagens/contato.png')" onmouseout="mudaFoto('_imagens/glass-oculos-preto-peq.png')"><a href="fale-conosco.html">Fale conosco</a></a></li>
     </ul>
     </nav>
     </header>
 
 <section id="corpo">
+
+<article id="noticia-principal">
+<header id="cabecalho-artigo">
 <hgroup>
 <h3>Tecnologia > &nbsp;Inovações</h3>
 <h1>Saiba tudo sobre o Google Glass</h1>
 <h2>por Jader Fróes</h2>
-<h3>Atualizado em 23/Abril/2013</h3>
+<h3 class="direita">Atualizado em 23/Abril/2013</h3>
 </hgroup>
+</header>
 
 <h2>O que é</h2>
 <p>O <span style="font-weight:900;">Google Glass</span> é um acessório em forma de óculos que possibilita a interação dosusuárioscom diversos conteúdos em realidade aumentada. Também chamado de <a href="http://globoesporte.com" target="_black">Project Glass</a>, o eletrônico é capaz de tirar fotos a partir de comandos de voz, enviar mensagens instantâneas e realizar vídeoconferências. Seu lançamento está previsto para 2014, e seu preço deve ser de US$ 1,5 mil. Atualmente o <em>Google Glass</em> encontra-se em fase de testes e já possui um vídeo totalmente gravado com o dispositivo. Além disso, a companhia de buscas registrou novas patentes anti-furto e de desbloqueio de tela para o acessório.</p>
@@ -51,7 +57,7 @@
 <h2>Data de lançamento</h2>
 <p>Não há uma data específica e oficial para o dispositivo ser lançado, ainda. Pode ser que ele esteja disponível em demonstrações a partir de 2013, mas seu lançamento para as lojas fica para, pelo menos, 2014.</p>
 
-<h1>Especificações Técnicas</h1>
+<h2>Especificações Técnicas</h2>
 <table id="tabelaspec">
     <caption> Tabela técnica do Google Glass <span>Mar/2013</span></caption>
 
@@ -62,13 +68,15 @@
     <tr><td class="col-dir">Bluetooth</td></tr>
     <tr><td class="col-esq">Memória Interna</td><td class="col-dir">12GB</td></tr>
 </table>
+
 <h2>Como funciona</h2>
-De acordo com fontes próximas do Google, os óculos vão contar com uma pequena tela de LCD ou AMOLED na parte superior e em frente aos olhos do usuário. Com o uso de uma câmera e GPS, você pode se situar, assim como selecionar opções com o movimento da cabeça
+<p>De acordo com fontes próximas do Google, os óculos vão contar com uma pequena tela de LCD ou AMOLED na parte superior e em frente aos olhos do usuário. Com o uso de uma câmera e GPS, você pode se situar, assim como selecionar opções com o movimento da cabeça.</p>
 
 <h2>O que você pode fazer com o Google Glasses</h2>
 <p>O vídeo de divulgação do Google mostra que você pode se transformar em uma espécie de “super-humano”, já que o aparelho pode indicar a quantos metros você está de seu destino, se o metrô está aberto ou fechado, mostrar o clima, agenda e até mesmo permitir que você marque encontros apenas com comandos de voz.</p>
 
 [AQUI ENTRA UM VÍDEO]
+</article>
 </section>
 <aside id="lateral">
 <h1>Outras Notícias</h1>
@@ -82,7 +90,7 @@ De acordo com fontes próximas do Google, os óculos vão contar com uma pequena
 <p>Além da surpresa do áudio, a tela montada a frente do olho do usuário também chamou atenção. Serão 640 x 360 pixels de resolução que, em proporção, equivaleria a um monitor de 25 polegadas de alta definição colocado a 2,5 metros de distância do espectador.</p>
 </aside>
 <footer id="rodape">
-<p>Copyright &copy; 2013 - by Gustavo Guanabara<br>
+<p>Copyright &copy; 2020 - by Jader Froes & Gustavo Guanabara<br>
 <a href="http://facebook.com" target="_blanck"> Facebook</a>  |
 <a href="http://twitter.com" target="_blanck"> Twitter</a></p>
 </footer>
