mapa de imagem pronto

--- a/site-google-glass-html5/google-glass.html
+++ b/site-google-glass-html5/google-glass.html
@@ -7,6 +7,7 @@
         body {
             font-family: Arial;
             font-size: 10pt;
+            overflow: hidden;
         }
 
         p{
@@ -37,6 +38,8 @@
             float: right;
             margin-left: 5px; 
         }
+
+
     </style>
 </head> 
 <body>
