--- a/site-google-glass-html5/fale-conosco.html
+++ b/site-google-glass-html5/fale-conosco.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<!--Comentário-->
+
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <title>Tudo sobre Google Glass</title>
     <link rel="stylesheet" href="_css/estilo.css"> <!--link com CSS-->
+    <link rel="stylesheet" href="_css/fotos.css">
 
     <script language= "javascript" src="_javascript/funcoes.js"></script> </script>
     
@@ -18,56 +19,71 @@
     <h2>A revolução do Google está chegando</h2>
     </hgroup>
 
-    <img id="icone" src="_imagens/glass-oculos-preto-peq.png">
+    <img id="icone" src="_imagens/contato.png">
     <nav id="menu"> <!--tag para menu de navegação-->
-    <h1>Menu Principal</h1>
-    <ul type="disc"> <!--lista não ordenada-->
-        <li onmouseover="mudaFoto('_imagens/home.png')" onmouseout="mudaFoto('_imagens/glass-oculos-preto-peq.png')"><a href="index.html">Home</a></li> <!--list item-->
-        <li onmouseover="mudaFoto('_imagens/especificacoes.png')" onmouseout="mudaFoto('_imagens/glass-oculos-preto-peq.png')"><a href="specs.html">Especificações</a></li>
-        <li onmouseover="mudaFoto('_imagens/fotos.png')" onmouseout="mudaFoto('_imagens/glass-oculos-preto-peq.png')"><a href="fotos.html">Fotos</a></li>
-        <li onmouseover="mudaFoto('_imagens/multimidia.png')" onmouseout="mudaFoto('_imagens/glass-oculos-preto-peq.png')"><a href="multimidia.html">Multimídia</a></li>
-        <li onmouseover="mudaFoto('_imagens/contato.png')" onmouseout="mudaFoto('_imagens/glass-oculos-preto-peq.png')"><a href="fale-conosco.html">Fale conosco</a></a></li>
-    </ul>
+        <h1>Menu Principal</h1>
+        <ul type="disc"> <!--lista não ordenada-->
+            <li onmouseover="mudaFoto('_imagens/home.png')" onmouseout="mudaFoto('_imagens/contato.png')"><a href="index.html">Home</a></li> <!--list item-->
+            <li onmouseover="mudaFoto('_imagens/especificacoes.png')" onmouseout="mudaFoto('_imagens/contato.png')"><a href="specs.html">Especificações</a></li>
+            <li onmouseover="mudaFoto('_imagens/fotos.png')" onmouseout="mudaFoto('_imagens/contato.png')"><a href="fotos.html">Fotos</a></li>
+            <li onmouseover="mudaFoto('_imagens/multimidia.png')" onmouseout="mudaFoto('_imagens/contato.png')"><a href="multimidia.html">Multimídia</a></li>
+            <li onmouseover="mudaFoto('_imagens/contato.png')" onmouseout="mudaFoto('_imagens/contato.png')"><a href="fale-conosco.html">Fale conosco</a></a></li>
+        </ul>
     </nav>
     </header>
-Fale Conosco > Contato
-Formulário de Contato
-por Gustavo Guanabara
-Atualizado em 01/Maio/2013
 
-Identificação do Usuário
-    Nome:
-    Senha:
-    E-mail:
-    Sexo:
-        - Masculino
-        - Feminino
-    Data de Nascimento:
+    <section id="corpo-full">
+            <article id="noticia-principal">
+                <header id="cabecalho-artigo">
+                    <hgroup>
+                    <h3>Fale Conosco > Contato</h3>
+                    <h1>Formulário de Contato</h1>
+                    <h2>por Jader Fróes</h2>
+                    <h3 class="direita">Atualizado em 9/Março/2020</h3>
+                    </hgroup>
+                </header>
 
-Endereço do Usuário
-    Logradouro:
-    Número:
-    Estado:
-    Cidade:
+            <form>    
+                <fieldset id="usuario"><legend> Identificação do Usuário</legend>
+                    <p>Nome: <input type="text" name="cNome" id="cNome" size="20" maxlength="30"></p>
+                    <p>Senha: <input type="password" ></p>
+                    <p>E-mail: <input type="email"> </p>
+                    <fieldset id="sexo">Sexo:
+                        - Masculino
+                        - Feminino</fieldset>
+                    <p>Data de Nascimento:</p>
+                </fieldset>
 
-Mensagem do Usuário
-    Grau de Urgência:
-    Mensagem:
+                <fieldset id="endereco"><legend>Endereço do Usuário</legend>
+                    Logradouro:
+                    Número:
+                    Estado:
+                    Cidade:
+                </fieldset>    
 
-Quero um Google Glass
-    Gostaria de adquirir um Google Glass quando disponível
-    Cor:
-    Quantidade:
-    Preço Total: R$
+                <fieldset id="mensagem"><legend>Mensagem do Usuário</legend>
+                    Grau de Urgência:
+                    Mensagem:
+                </fieldset>
 
+                <fieldset id="pedido"><legend>Quero um Google Glass</legend>
+                    Gostaria de adquirir um Google Glass quando disponível
+                    Cor:
+                    Quantidade:
+                    Preço Total: R$
+                <fieldset>
 
-[BOTÃO ENVIAR]
+                [BOTÃO ENVIAR]
+            </form>
 
-<footer id="rodape">
-<p>Copyright &copy; 2020 - by Jader Froes & Gustavo Guanabara<br>
-<a href="http://facebook.com" target="_blanck"> Facebook</a>  |
-<a href="http://twitter.com" target="_blanck"> Twitter</a></p>
-</footer>
+        </article>
+    </section>
+
+    <footer id="rodape">
+        <p>Copyright &copy; 2020 - by Jader Froes & Gustavo Guanabara<br>
+            <a href="http://facebook.com" target="_blanck"> Facebook</a>  |
+            <a href="http://twitter.com" target="_blanck"> Twitter</a></p>
+    </footer>
 </div>
 </body>
 </html>
