--- a/site-google-glass-html5/specs.html
+++ b/site-google-glass-html5/specs.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>Tudo sobre Google Glass</title>
     <link rel="stylesheet" href="_css/estilo.css"> <!--link com CSS-->
+    <link rel="stylesheet" href="_css/specs.css">
 
     <script language= "javascript" src="_javascript/funcoes.js"></script> </script>
     
@@ -31,15 +32,32 @@
     </nav>
     </header>
 
-Glass > Especificações
-Raio-X no Google Glass
-por Gustavo Guanabara
-Atualizado em 01/Maio/2013
+<section id="corpo-full">
+        <article id="noticia-principal">
+            <header id="cabecalho-artigo">
+                <hgroup>
+                <h3>Glass > Especificações</h3>
+                <h1>Raio-X no Google Glass</h1>
+                <h2>por Jader Fróes</h2>
+                <h3 class="direita">Atualizado em 9/Março/2020</h3>
+                </hgroup>
+            </header>
 
-Clique em qualquer área destacada da imagem para ter mais informações sobre os recursos do Google Glass. Qualquer ponto vermelho vai te levar a um lugar cheio de novas informações.
 
-[AQUI ENTRA UMA IMAGEM]
+            <p>Clique em qualquer área destacada da imagem para ter mais informações sobre os recursos do Google Glass. Qualquer ponto vermelho vai te levar a um lugar cheio de novas informações.</p>
 
+            <section id="conteudo">
+                <img src="_imagens/glass-esquema-marcado.jpg" usemap="#meu-mapa"> <!--referencia o mapa desse documento( # ) com nome meu-mapa-->
+                <map name="meu-mapa">
+                    <area shape="rect" coords="177,212,274,251" href="google-glass.html#tela" target="janela"> <!--area retangular mapeada-->
+                    <area shape="circle" coords="158, 244,12" href="google-glass.html#camera" target="janela"> <!--area circular mapeada-->
+                    <area shape="circle" coords="76, 51,12" href="google-glass.html#gadgets" target="janela"> <!--area circular mapeada-->
+                    <area shape="poly" coords="27,144,82,216,84,249, 27,169" href="google-glass.html#sensores" target="janela"><!--area poligonal mapeada-->
+                </map>
+                <iframe src="google-glass.html" name="janela" id="frame-spec"></iframe>
+            </section>
+        </article>
+</section>
 <footer id="rodape">
 <p>Copyright &copy; 2020 - by Jader Froes & Gustavo Guanabara<br>
 <a href="http://facebook.com" target="_blanck"> Facebook</a>  |
