--- a/site-google-glass-html5/index.html
+++ b/site-google-glass-html5/index.html
@@ -97,3 +97,9 @@
 </div>
 </body>
 </html>
+
+
+<!-- to do
+    colocar vídeos por link no index;
+    tirar prints do site e colocar no README.md
+-->
