--- a/site-google-glass-html5/fale-conosco.html
+++ b/site-google-glass-html5/fale-conosco.html
@@ -5,9 +5,16 @@
     <meta charset="UTF-8">
     <title>Tudo sobre Google Glass</title>
     <link rel="stylesheet" href="_css/estilo.css"> <!--link com CSS-->
-    <link rel="stylesheet" href="_css/fotos.css">
+    <link rel="stylesheet" href="_css/form.css">
 
     <script language= "javascript" src="_javascript/funcoes.js"></script> </script>
+    <script>
+        function calc_total(){
+            var qtd = parseInt(document.getElementById('cQtd').value);
+            total = qtd * 1500;
+            document.getElementById('cTot').value = total;
+        }
+    </script>
     
 </head>
 <body>
@@ -43,37 +50,65 @@
                     </hgroup>
                 </header>
 
-            <form>    
+            <form method="POST" id="fContato" action="mailto: jaderfroesrosa@gmail.com" oninput="calc_total();">    
                 <fieldset id="usuario"><legend> Identificação do Usuário</legend>
-                    <p>Nome: <input type="text" name="cNome" id="cNome" size="20" maxlength="30"></p>
-                    <p>Senha: <input type="password" ></p>
-                    <p>E-mail: <input type="email"> </p>
-                    <fieldset id="sexo">Sexo:
-                        - Masculino
-                        - Feminino</fieldset>
-                    <p>Data de Nascimento:</p>
+                    <p><label for="cNome"> Nome:</label> 
+                        <input type="text" name="tNome" id="cNome" size="20" maxlength="30" placeholder="Nome Completo"></p>
+                    <p><label for="cSenha">Senha: </label>
+                        <input type="password" name="tSenha" id="cSenha" size="8" maxlength="8" placeholder="8 dígitos"></p>
+                    <p><label for="cEmail">E-mail: </label>
+                        <input type="email" name="tEmail" id="cEmail" size="20" maxlength="40"> </p>
+                    <fieldset id="sexo"><legend>Sexo</legend>
+                        <input type="radio" name="tSexo" id="cMasc" checked> <label for="cMasc"> Masculino</label><br>
+                        <input type="radio" name="tSexo" id="cFem"> <label for="cFem">Feminino</label> <!--label associa o texto Masculino a opção-->
+                    </fieldset>
+                    <p>Data de Nascimento: <input type="date" name="tNasc" id="cNasc"  ></p>
                 </fieldset>
 
                 <fieldset id="endereco"><legend>Endereço do Usuário</legend>
-                    Logradouro:
-                    Número:
-                    Estado:
-                    Cidade:
+                    <p><label for="cRua">Logradouro: </label>
+                        <input type="text" name="tRua" id="cRua" size="20" maxlength="80" placeholder="Rua, Av, Trav.."></p>
+                    <p><label for="cNum">Número: </label>
+                        <input type="number" name="tNum" id="cNum" min="0" max="9999"></p>
+                    <p><label for="cEst"> Estado: </label>
+                    <select name="tEst" id="cEst" >
+                        <optgroup label="Planeta terra">
+                            <option value="RS" selected>Rio Grande do Sul</option>
+                            <option value="RM">Resto do mundo</option>
+                        </optgroup>
+                        <optgroup label="Universo">
+                            <option value="MV">Multiverso</option>
+                        </optgroup>
+                    </select></p>
+                    <p><label for="cCid"> Cidade: </label>
+                    <input type="text" name="tCid" id="cCid" maxlength="40" size="20" placeholder="Sua cidade" list="cidades"></p>
+                    <datalist id="cidades">
+                        <option value="Esteio"></option>
+                        <option value="Pelotas"></option>
+                        <option value="Porto Alegre"></option>
+                    </datalist>
                 </fieldset>    
 
                 <fieldset id="mensagem"><legend>Mensagem do Usuário</legend>
-                    Grau de Urgência:
-                    Mensagem:
+                    <p><label for="cUrg">Grau de Urgência: </label>
+                    Mín<input type="range" name="tUrg" id="cUrg" min="0" max="10">Máx</p>
+                    <p><label for="cMsg"> Mensagem:</label>
+                    <textarea name="tMsg" id="cMsg" cols="30" rows="5" placeholder="Deixe aqui sua mensagem"></textarea></p>
                 </fieldset>
 
                 <fieldset id="pedido"><legend>Quero um Google Glass</legend>
-                    Gostaria de adquirir um Google Glass quando disponível
-                    Cor:
-                    Quantidade:
-                    Preço Total: R$
-                <fieldset>
+                    <p><input type="checkbox" name="tPed" id="cPed" checked>
+                        <label for="cPed"> Gostaria de adquirir um Google Glass quando disponível</label></p>
+                    <p><label>Cor:</label>
+                    <input type="color" name="tCor" id="cCor" value="#0000FF"></p>
+                    <p><label for="cQtd">Quantidade:</label>
+                    <input type="number" name="tQtd" id="cQtd" min="0" max="5" value="0"</p>
+                    <p><label for="cTot">Preço Total: R$</label>
+                    <input type="text" name="tTot" id="cTot" placeholder="Total a pagar" readonly></p>
+                    </fieldset>
 
-                [BOTÃO ENVIAR]
+                <!--<input type="submit" value="Enviar">-->
+                <input type="image" name="tEnviar" src="_imagens/botao-enviar.png">
             </form>
 
         </article>
