--- a/site-google-glass-html5/fotos.html
+++ b/site-google-glass-html5/fotos.html
@@ -5,11 +5,9 @@
     <meta charset="UTF-8">
     <title>Tudo sobre Google Glass</title>
     <link rel="stylesheet" href="_css/estilo.css"> <!--link com CSS-->
-    <link rel="stylesheet" href="_css/form.css">
-
-    <script language= "javascript" src="_javascript/funcoes.js"></script> </script>
-    
+    <link rel="stylesheet" href="_css/fotos.css">
 </head>
+<script language= "javascript" src="_javascript/funcoes.js"></script> </script>    
 <body>
 <div id="interface">
     
@@ -21,18 +19,18 @@
 
     <img id="icone" src="_imagens/fotos.png">
     <nav id="menu"> <!--tag para menu de navegação-->
-    <h1>Menu Principal</h1>
-    <ul type="disc"> <!--lista não ordenada-->
-        <li onmouseover="mudaFoto('_imagens/home.png')" onmouseout="mudaFoto('_imagens/fotos.png')"><a href="index.html">Home</a></li> <!--list item-->
-        <li onmouseover="mudaFoto('_imagens/especificacoes.png')" onmouseout="mudaFoto('_imagens/fotos.png')"><a href="specs.html">Especificações</a></li>
-        <li onmouseover="mudaFoto('_imagens/fotos.png')" onmouseout="mudaFoto('_imagens/fotos.png')"><a href="fotos.html">Fotos</a></li>
-        <li onmouseover="mudaFoto('_imagens/multimidia.png')" onmouseout="mudaFoto('_imagens/fotos.png')"><a href="multimidia.html">Multimídia</a></li>
-        <li onmouseover="mudaFoto('_imagens/contato.png')" onmouseout="mudaFoto('_imagens/fotos.png')"><a href="fale-conosco.html">Fale conosco</a></a></li>
-    </ul>
+        <h1>Menu Principal</h1>
+        <ul type="disc"> <!--lista não ordenada-->
+            <li onmouseover="mudaFoto('_imagens/home.png')" onmouseout="mudaFoto('_imagens/fotos.png')"><a href="index.html">Home</a></li> <!--list item-->
+            <li onmouseover="mudaFoto('_imagens/especificacoes.png')" onmouseout="mudaFoto('_imagens/fotos.png')"><a href="specs.html">Especificações</a></li>
+            <li onmouseover="mudaFoto('_imagens/fotos.png')" onmouseout="mudaFoto('_imagens/fotos.png')"><a href="fotos.html">Fotos</a></li>
+            <li onmouseover="mudaFoto('_imagens/multimidia.png')" onmouseout="mudaFoto('_imagens/fotos.png')"><a href="multimidia.html">Multimídia</a></li>
+            <li onmouseover="mudaFoto('_imagens/contato.png')" onmouseout="mudaFoto('_imagens/fotos.png')"><a href="fale-conosco.html">Fale conosco</a></a></li>
+        </ul>
     </nav>
     </header>
 
-<section id="corpo-full">
+    <section id="corpo-full">
         <article id="noticia-principal">
             <header id="cabecalho-artigo">
                 <hgroup>
