--- a/site-google-glass-html5/multimidia.html
+++ b/site-google-glass-html5/multimidia.html
@@ -54,7 +54,7 @@
                         Desculpe, não foi possível carregar o vídeo.
                 </video>
             </div>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/4EvNxWhskf8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <!--<iframe width="560" height="315" src="https://www.youtube.com/embed/4EvNxWhskf8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
         </article>
     </section>
 
